[package]
name = "boba-go"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.8"
rand_chacha = "0.3"
thiserror = "2"
ratatui = { version = "0.29.0", default-features = false, features = ["crossterm"] }
crossterm = "0.28"
tokio = { version = "1.48.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
futures = "0.3.31"
libp2p = { version = "0.56.0", features = ["tcp", "noise", "yamux", "mdns", "request-response", "cbor", "tokio", "macros", "gossipsub"] }
serde_json = "1.0.145"

[[bin]]
name = "boba_tui"
path = "src/bin/boba_tui.rs"
